trunk/Archive2/f5/b5e48e1af62fe6/output
main.cpp: In function 'int main()':
main.cpp:5:17: error: invalid conversion from 'const int*' to 'int*' [-fpermissive]
     int* ptr = &tobepointed;
                 ^
main.cpp:5:10: warning: unused variable 'ptr' [-Wunused-variable]
     int* ptr = &tobepointed;
          ^
