trunk/Archive2/f5/b5e48e1af62fe6/main.cpp
#include <iostream>    

int main() {
    const int tobepointed = 10;
    int* ptr = &tobepointed;
}